# Incremental_DataPipeline_using_Snowflake

./: .gitignore  README.md  data_extraction.py  deployment_and_key_workflow.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt  rsa_key_pair_generator.md
.github/workflows/: snowpark-ci-cd.yml
config/: dev.yml  prod.yml
lambda_package/: lambda_function.py
lambda_package/charset_normalizer-3.4.1.dist-info/: RECORD
scrape_co2data/: data_extraction.py  scrape_data_s3.py
scripts/: 02_create_rawco2data_stream.py  check_and_fix_udf.py  cleanup.sql  external_api_integration.sql  incremental_raw_co2data.py  normalize_co2.sql  orchestrate_tasks.sql  raw_co2_data.py  render_setup.py  render_yaml.py  scrape_data_s3.py  setup.sql  setup_keypair_auth.py  setup_snowflake.sql  snowflake_deployer.py
scripts/co2_analytical_sp/: .gitignore
scripts/co2_harmonized_sp/: .gitignore
scripts/daily_weekly_co2_changes/: .gitignore  snowflake.yml.template
scripts/deployment_files/: check_and_fix_udf.py  check_connections_file.py  force_deploy.py  snowflake_deployer.py  test_key_auth.py
templates/: orchestrate_tasks.sql.j2  setup.sql.j2  table_grants.sql.j2
tests/: daily_weekly_co2changes.py  test_co2_analytical_sp.py  test_co2_harmonized_sp.py  test_loading_co2_data_sp.py  test_s3_connection.py  test_volatility_co2ppm.py  test_weekly_co2_changes.py  testing_co2_harmonzied_sp.py  testing_daily_percent_change.py  testing_loading_co2data_sp.py  testing_s3_connection.py  testing_snowflake_connection.py  testing_volatility_co2ppm.py
udfs_and_spoc/: normalize_co2.sql
(+34 files in other folders)
