[tool.poetry]
name = "incremental-datapipeline-using-snowflake"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "your_package_name"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
snowflake-snowpark-python = {extras = ["pandas"], version = "^1.28.0"}
snowflake-cli-labs = "^3.2.1"
python-dotenv = "^0.19.2"
pytest = "^6.2.5"
jinja2 = "3.1.4"
pyyaml = "^6.0.2"
boto3 = "^1.37.3"
cryptography = "^44.0.2"
snowflake-connector-python = ">=3.0.0"
logging = "^0.4.9.6"
pyarrow = ">=7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"